kubernetes-vault/kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-ingress
  namespace: consul
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   # nginx.ingress.kubernetes.io/use-regex: "true"
  #   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: consul.homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: consul-ui
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   # nginx.ingress.kubernetes.io/use-regex: "true"
  #   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: vault.homework.otus
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-ui
            port: 
              number: 8200
